--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -49,20 +49,15 @@
 
 
 
-tr> td.day {
-  width:80px;
-}
+// tr> td.day {
+//   width:80px;
+// }
 
 .calendar-heading {
   text-align: center;
   margin-top: 20px;
 }
 
-nav > a {
-  text-decoration: none;
-  color: inherit;
-  font-size: 12px;
-}
 
 .calendar-title {
   font-size: 22px;
