Modif css calendar essai 4

--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -1,27 +1,25 @@
 .table.simple-calendar {
   table-layout: fixed;   /* forcer largeur égale des colonnes */
-  width: 100%;
-  max-width: 900px;      /* largeur max du calendrier */
+  width: 95%;
+  max-width: 95%;      /* largeur max du calendrier */
   margin: auto;          /* centrer la table */
   border-collapse: collapse;
 }
 
 .table.simple-calendar th,
 .table.simple-calendar td {
-  width: 100px;
-  max-width: 100px;
-  min-width: 100px;
-
+  width: 80px;               /* largeur fixe pour chaque jour */
+  max-width: 80px;
   height: 70px;
   box-sizing: border-box;
-  padding: 5px;
+  padding: 2px;
   vertical-align: top;
   overflow-wrap: normal; /* laisse casser aux espaces uniquement */
   word-break: normal;    /* pas de coupure au milieu d’un mot */
 }
 
 .table.table-striped {
-  padding: 10px;
+  padding: 5px;
 }
 
 .table.simple-calendar .day {
@@ -30,28 +28,30 @@
 }
 
 .reservation-block {
-  width: 100%;      /* occupe toute la cellule */
+  max-width: 100%;
   box-sizing: border-box;
   background-color: #a7d8f7;
-  margin-top: 0px;
-  padding: 2px;
+  margin-top: 4px;
+  padding: 1px;
   border-radius: 4px;
   font-size: 6px;
 
-  /* Nouveau : s'adapte à la cellule */
-  display: block;
-  max-height: 100%;   /* ne dépassera pas la cellule */
-  overflow: hidden;   /* texte caché si trop long */
-  white-space: normal;   /* permet le retour à la ligne */
-  word-wrap: break-word; /* coupe les mots trop longs si besoin */
-  overflow-wrap: break-word;
+  /* ✅ Nouveau : uniformiser la taille */
+  height: 40px;             /* hauteur fixe pour tous les blocs */
+  overflow: hidden;         /* masque le texte qui dépasse */
+  text-overflow: ellipsis;  /* ajoute "..." si texte trop long */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;  /* centre verticalement le texte */
+  white-space: nowrap;      /* empêche le texte de passer à la ligne */
 }
 
 
 
-// tr> td.day {
-//   width:80px;
-// }
+tr> td.day {
+  width:80px;
+  padding: 4px;
+}
 
 .calendar-heading {
   text-align: center;
@@ -82,4 +82,5 @@ nav > a {
   font-weight: bolder;
   text-decoration: underline;
   font-size: 14px;
+  color: inherit;
 }
