Modif css calendar essai 5

--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -50,7 +50,10 @@
 
 tr> td.day {
   width:80px;
-  padding: 4px;
+  padding-left: 4px;
+  padding-right: 4px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .calendar-heading {
