--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -2,25 +2,28 @@
   <div class="row">
     <div class="col-sm-8 col-md-6 col-lg-6 mx-auto">
       <div class="form" data-controller="datepicker"
-
-        data-datepicker-booked-dates-value = "<%= propriete.reservations.where.not(statut: 'annulée').pluck(:date_debut, :date_fin).flatten.map { |d| d.to_date.to_s }.to_json %>">
+        data-datepicker-bookings-value='<%= propriete.reservations
+          .where.not(statut: "annulée")
+          .map { |r| { start: r.date_debut.to_date.to_s, end: r.date_fin.to_date.to_s } }
+          .to_json %>'>
 
         <%= simple_form_for [@propriete, @reservation] do |f| %>
-        <%= f.input :date_debut, as: :string,
-        label: "Date de début",
-        input_html: {
-          value: (@reservation.date_debut.present? ? @reservation.date_debut.strftime("%d/%m/%Y") : ""),
-          data: { controller: "datepicker" }
-        } %>
 
-        <%= f.input :date_fin, as: :string,
-          label: "Date de fin",
-          input_html: {
-          value: (@reservation.date_fin.present? ? @reservation.date_fin.strftime("%d/%m/%Y") : ""),
-          data: { controller: "datepicker" }
-        } %>
+          <%= f.input :date_debut, as: :string,
+            label: "Date de début",
+            input_html: {
+              value: (@reservation.date_debut.present? ? @reservation.date_debut.strftime("%d/%m/%Y") : ""),
+              data: { controller: "datepicker" }
+            } %>
 
-        <%= f.submit "Demande de réservation", class:"btn-home" %>
+          <%= f.input :date_fin, as: :string,
+            label: "Date de fin",
+            input_html: {
+              value: (@reservation.date_fin.present? ? @reservation.date_fin.strftime("%d/%m/%Y") : ""),
+              data: { controller: "datepicker" }
+            } %>
+
+          <%= f.submit "Demande de réservation", class:"btn-home" %>
 
         <% end %>
       </div>
