--- a/app/views/reservation_mailer/reservation_confirmation_update.html.erb
+++ b/app/views/reservation_mailer/reservation_confirmation_update.html.erb
@@ -1,4 +1,4 @@
-<p>Bonjour <%= @user.email %> !</p>
+<p>Bonjour <%= @user.nom_complet %> !</p>
 
 <p>Le statut de votre demande de réservation pour la propriété "<%= @propriete.nom %>" a été mis à jour.</p>
 
