--- a/app/views/reservation_mailer/reservation_request_email.html.erb
+++ b/app/views/reservation_mailer/reservation_request_email.html.erb
@@ -1,3 +1,4 @@
+<p>Bonjour <%= @reservation.user.nom_complet %>,</p>
 <p>Votre demande de réservation a bien été prise en compte et est en attente de validation</p>
  <p><strong>Détails de la réservation :</strong></p>
  <p><%= @reservation.propriete.nom %> </p>
