--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -9,6 +9,11 @@
 
         <%= simple_form_for [@propriete, @reservation] do |f| %>
 
+          <% if current_user.admin?%>
+            <%= f.input :nom, label: "Nom de la personne pour laquelle la réservation est faite" %>
+          <% end %>
+
+
           <%= f.input :date_debut, as: :string,
             label: "Date de début",
             input_html: {
