--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -20,7 +20,7 @@
                     <% end %>
                   </div>
                   <div>
-                
+
                   </div>
                 </div>
               </div>
@@ -29,26 +29,33 @@
               <p><%= image_tag "house.png", class:"pe-2"%> <%= r.propriete.nom %></p>
               <p><%= image_tag "calendar.png", class:"pe-2"%> Du  <%= r.date_debut.strftime("%d/%m/%Y") %> au  <%= r.date_fin.strftime("%d/%m/%Y") %></p>
               <p><strong class="pe-2">Statut :</strong><%= r.statut %></p>
-              <% if current_user.admin? %>  <!-- Affiche cette option uniquement pour les administrateurs -->
-                <%= simple_form_for r, url: update_statut_reservation_path(r), method: :patch,
-                  html: {
-                      data: {
-                                controller: "alert",
-                                action: "submit->alert#initSweetalert",
-                                alert_icon_value: "warning",
-                                alert_type_value: "Es-tu sûr ?",
-                                alert_title_value: "Modifier le statut de la réservation",
-                                alert_html_value: "Tu t'apprêtes à modifier le statut de cette réservation.",
-                                alert_confirm_button_text_value: "Oui, mettre à jour",
-                                alert_cancel_button_text_value: "Annuler",
-                                alert_show_cancel_button_value: true,
-                                turbo: false
-                              }
-                  } do |f| %>
-                  <%= f.input :statut, collection: Reservation.statuts.keys.map { |statut| [statut.humanize, statut] }, label: "Modifier le statut" %>
-                  <%= f.submit 'Mettre à jour', class: 'btn btn-ghost' %>
-                <% end %>
-              <% end %>
+              <% if current_user.admin? %>
+  <%= simple_form_for r,
+        url: update_statut_reservation_path(r),
+        method: :patch,
+        html: {
+          data: {
+            controller: "alert",
+            action: "submit->alert#initSweetalert",
+            alert_icon_value: "warning",
+            alert_type_value: "Es-tu sûr ?",
+            alert_title_value: "Modifier le statut de la réservation",
+            alert_html_value: "Tu t'apprêtes à modifier le statut de cette réservation.",
+            alert_confirm_button_text_value: "Oui, mettre à jour",
+            alert_cancel_button_text_value: "Annuler",
+            alert_show_cancel_button_value: true,
+            turbo: false  # <-- important pour désactiver Turbo
+          }
+        } do |f| %>
+
+    <%= f.input :statut,
+                collection: Reservation.statuts.keys.map { |statut| [statut.humanize, statut] },
+                label: "Modifier le statut" %>
+
+    <%= f.submit 'Mettre à jour', class: 'btn btn-ghost' %>
+  <% end %>
+<% end %>
+
             </div>
           </div>
         <% end %>
