--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,13 +1,10 @@
 .container-navbar ul {
   background-color: #f5f5f5;
-//  background-color: #FFEFD6 ;
   margin-bottom: 0;
   padding: 30px 40px;
 }
-#navbar {
-  // background-color: #f5f5f5;
 
-}
+
 .tabs-underlined {
   display: flex;
   align-items: center;
@@ -31,12 +28,14 @@
 .dropdown-toggle {
   border: none;
 }
+
 #navbarDropdown {
    color: #C0C1C2;
   }
 
   #navbarDropdown:hover {
    color: black;
+   font-weight: bolder;
   }
 @media (max-width: 725px) {
   .tabs-underlined li {
@@ -62,6 +61,6 @@
     text-align: center;
     font-size: 11px;
     margin-top: 5px;
+
   }
 }
-
