--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -9,7 +9,7 @@
 
 <p>À bientôt !</p>
 
-<%= image_tag asset_url("logo.png"), alt: "logo" %>
+
+<%= image_tag "https://www.family-loc.store/images/logo.png", alt: "Logo Family Loc" %>
 <p>Merci d’utiliser Family Loc !</p>
 <p>https://www.family-loc.store/</p>
-
