Font sur les nouvelles pages

--- a/app/views/reservations/calendar.html.erb
+++ b/app/views/reservations/calendar.html.erb
@@ -30,6 +30,6 @@
     </div>
   </div>
   <div class="d-flex justify-content-center mt-3">
-    <%= link_to "Retour", reservations_path, class:"text-decoration-none text-dark" %>
+    <%= link_to "Retour", reservations_path, class:"text-decoration-underline text-dark" %>
   </div>
 </div>
