Mise en commentaire de l'export pour le moment

--- a/app/views/admin/reservations/index.html.erb
+++ b/app/views/admin/reservations/index.html.erb
@@ -2,14 +2,14 @@
 
 <div class="container-fluid">
   <div class="row justify-content-center py-4">
-    <div class="col-12 col-md-6 d-flex justify-content-center align-items-center">
-      <% if current_user.admin? %>
-        <p><%= link_to "Exporter des données", admin_exports_path, class:"dropdown-item text-dark"%></p>
-      <% end %>
-    </div>
-  </div>
+    <%# <div class="col-12 col-md-6 d-flex justify-content-center align-items-center"> %>
+      <%# if current_user.admin? %>
+        <%# <p><%= link_to "Exporter des données", admin_exports_path, class:"dropdown-item text-dark"%></p> %>
+      <%# end %>
+    <%# </div> %>
 
-    <div class="col-12 col-md-6 d-flex justify-content-center align-items-center">
+
+    <div class="col-12 col-md-6 ">
       <%= form_with url: admin_reservations_path, method: :get, local: true, class: "d-flex mb-4" do %>
         <%= text_field_tag :query, params[:query], class: "form-control me-2", onclick: "this.value=''" %>
          <button type="submit" class="btn-search" title="Rechercher">
