Mise en commentaire de l'export pour le moment 2

--- a/app/views/admin/reservations/index.html.erb
+++ b/app/views/admin/reservations/index.html.erb
@@ -4,7 +4,7 @@
   <div class="row justify-content-center py-4">
     <%# <div class="col-12 col-md-6 d-flex justify-content-center align-items-center"> %>
       <%# if current_user.admin? %>
-        <%# <p><%= link_to "Exporter des données", admin_exports_path, class:"dropdown-item text-dark"%></p> %>
+        <%# <p><%= link_to "Exporter des données", admin_exports_path, class:"dropdown-item text-dark"</p> %>
       <%# end %>
     <%# </div> %>
 
