--- a/app/views/admin/reservations/index.html.erb
+++ b/app/views/admin/reservations/index.html.erb
@@ -2,11 +2,11 @@
 
 <div class="container-fluid">
   <div class="row justify-content-center py-4">
-    <%# <div class="col-12 col-md-6 d-flex justify-content-center align-items-center"> %>
-      <%# if current_user.admin? %>
-        <%# <p><%= link_to "Exporter des données", admin_exports_path, class:"dropdown-item text-dark"</p> %>
-      <%# end %>
-    <%# </div> %>
+    <div class="col-12 col-md-6 d-flex justify-content-center align-items-center"> %>
+      <% if current_user.admin? %>
+        <%= link_to "Exporter des données", admin_exports_path, class:"dropdown-item text-dark" %>
+      <% end %>
+    </div>
 
 
     <div class="col-12 col-md-6 ">
