Font pour téléchargement des données

--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -86,3 +86,8 @@ div.dataTables_wrapper div.dataTables_filter label {
     margin-top: 1rem;
   }
 }
+
+#telechargement-data>i{
+  font-size: 40px;
+  color:gold
+}
